force-app/main/default/objects/Sales_order__c/Sales_order__c.object-meta.xml
<CustomObject>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Sales order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>