force-app/main/default/objects/Sales_order__c/fields/Daily_logs__c.field-meta.xml
<CustomField>
    <fullName>Daily_logs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily logs</label>
    <referenceTo>DailyLog__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>