force-app/main/default/objects/Sales_order__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <label>Grand Total</label>
    <summarizedField>Sales_order_item__c.Total__c</summarizedField>
    <summaryForeignKey>Sales_order_item__c.Sales_order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>