force-app/main/default/objects/Sales_order__c/fields/SO_Id__c.field-meta.xml
<CustomField>
    <fullName>SO_Id__c</fullName>
    <label>SO Id</label>
    <type>AutoNumber</type>
</CustomField>