force-app/main/default/objects/Sales_order__c/fields/Total_GST_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_Percent__c</fullName>
    <label>Total GST Percent</label>
    <summarizedField>Sales_order_item__c.GST_Percentage__c</summarizedField>
    <summaryForeignKey>Sales_order_item__c.Sales_order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>