force-app/main/default/objects/Sales_order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Route__c</columns>
    <columns>Branch__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>