force-app/main/default/objects/Sales_order__c/listViews/Open_Orders.listView-meta.xml
<ListView>
    <fullName>Open_Orders</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Route__c</columns>
    <columns>Branch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Open Orders</label>
</ListView>