force-app/main/default/objects/Sales_order__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Route__c</columns>
    <columns>Branch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>